packages/specification/testing/fixtures/invalid/duplicate-entity/app.prd
module billing {

  entity invoice {
    invoice_id: uuid
  }

  entity invoice {
    name: string
  }

}
